--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@
     padding: 0 0 41px 0;
 }
 
-.profile{
+.profile {
     max-width: 880px;
     margin: 40px auto 51px;
     display: flex;
@@ -118,4 +118,69 @@
 
 .profile__add-btn:hover {
     opacity: .6;
+}
+
+.elements {
+    max-width: 880px;
+    margin: 0 auto 67px;
+}
+
+.elements__list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 17px;
+    row-gap: 20px;
+}
+
+.elements__item {
+    max-width: 282px;
+    background: #FFFFFF;
+    border-radius: 10px;
+}
+
+.elements__photo {
+    height: 282px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.elements__caption-container {
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.elements__caption {
+    margin: 0;
+    padding: 25px 0 31px 21px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 75%;
+}
+
+.elements__btn-like {
+    margin: 30px 30px 30px 0;
+    background-image: url(./images/like.svg);
+    background-repeat: no-repeat;
+    background-color: #FFFFFF;
+    width: 22px;
+    height: 19px;
+    padding: 0;
+    border: none;
+    transition: opacity .5s ease;
+    cursor: pointer;
+}
+
+.elements__btn-like:hover {
+    opacity: 50%;
 }
