--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@
     background-image: url(./images/Edit_Button.svg);
     background-repeat: no-repeat;
     border: 1px solid #FFFFFF;
-    background-color: #000000;
+    background-color: transparent;
     width: 24px;
     height: 24px;
     cursor: pointer;
@@ -106,7 +106,7 @@
     background-image: url(./images/Vector.svg);
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #000000;
+    background-color: transparent;
     width: 150px;
     height: 50px;
     border: 2px solid #FFFFFF;
@@ -172,7 +172,7 @@
     margin: 30px 30px 30px 0;
     background-image: url(./images/like.svg);
     background-repeat: no-repeat;
-    background-color: #FFFFFF;
+    background-color: transparent;
     width: 22px;
     height: 19px;
     padding: 0;
@@ -214,7 +214,7 @@
 .popup__container {
     width: 90%;
     max-width: 430px;
-    min-height: 330px;
+    /*min-height: 330px;*/
     background: #FFFFFF;
     border-radius: 10px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -253,5 +253,44 @@
 
 .popup__fieldset {
     border: none;
-    
+    margin: 0;
+    padding: 54px 36px 48px;
+    max-width: 358px;
+}
+
+.popup__input {
+    margin-bottom: 30px;
+    width: 100%;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    border: none;
+    border-bottom: 1px solid #000000;
+}
+
+.popup__input:last-of-type {
+    margin-bottom: 0;
+}
+
+.popup__btn-save {
+    width: 358px;
+    height: 50px;
+    margin:  0 36px 37px;
+    padding: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: center;
+    color: #FFFFFF;
+    background-color:  #000000;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: opacity .8s ease;
+}
+
+.popup__btn-save:hover {
+    opacity: 80%;
 }
