--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,10 @@
     max-width: 142px;
     padding: 0 0 41px 0;
 }
+
+@media screen and (max-width: 1023px) {
+    .header__logo {
+        max-width: 103.5px;
+        padding-bottom: 31.6px;
+    }
+}
