--- a/blocks/profile/__about-user/prolife__about-user.css
+++ b/blocks/profile/__about-user/prolife__about-user.css
@@ -11,3 +11,12 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+@media screen and (max-width: 1023px) {
+    .prolife__about-user {
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+        padding-top: 14px;
+    }
+}
