--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -16,3 +16,9 @@
 .profile__add-btn:hover {
     opacity: 60%;
 }
+
+@media screen and (max-width: 1023px) {
+    .profile__add-btn {
+        width: 282px;
+    }
+}
