--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -14,3 +14,10 @@
 .profile__edit-btn:hover {
     opacity: 60%;
 }
+
+@media screen and (max-width: 1023px) {
+    .profile__edit-btn {
+        width: 18px;
+        height: 18px;
+    }
+}
