--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,3 +5,11 @@
     flex-direction: column;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 1023px) {
+    .profile__info {
+        padding: 0;
+        margin: 22.25px auto 36px;
+        align-items: center;
+    }
+}
