--- a/blocks/profile/__inner/profile__inner.css
+++ b/blocks/profile/__inner/profile__inner.css
@@ -3,3 +3,9 @@
     flex-direction: row;
     align-items: center;
 }
+
+@media screen and (max-width: 1023px) {
+    .profile__inner {
+        flex-direction: column;
+    }
+}
