--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -10,3 +10,12 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+@media screen and (max-width: 1023px) {
+    .profile__name {
+        font-size: 27px;
+        line-height: 33px;
+        text-align: center;
+        max-width: 189px;
+    }
+}
