--- a/blocks/profile/__user-info/profile__user-info.css
+++ b/blocks/profile/__user-info/profile__user-info.css
@@ -3,3 +3,9 @@
     align-items: center;
     gap: 18px;
 }
+
+@media screen and (max-width: 1023px) {
+    .profile__user-info {
+        gap: 10px;
+    }
+}
