--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,3 +5,11 @@
     justify-content: space-between;
     align-items: center;
 }
+
+@media screen and (max-width: 1023px) {
+    .profile {
+        max-width: 282px;
+        margin: 42px auto 36px;
+        flex-direction: column;
+    }
+}
