--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -7,3 +7,16 @@
     column-gap: 17px;
     row-gap: 20px;
 }
+
+@media screen and (max-width: 1023px) {
+    .elements__list {
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+    } 
+}
+
+@media screen and (max-width: 767px) {
+    .elements__list {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
