--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,3 +2,10 @@
     max-width: 880px;
     margin: 0 auto 67px;
 }
+
+@media screen and (max-width: 1023px) {
+    .elements {
+        max-width: 282px;
+        margin-bottom: 48px;
+    }
+}
