--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,8 +1,17 @@
 .footer__copyright {
+    margin: 0;
     max-width: 318px;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     color: #545454;
+}
+
+@media screen and (max-width: 1023px) {
+    .footer__copyright {
+        max-width: 100%;
+        font-size: 14px;
+        line-height: 17px;
+    }
 }
