--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -19,3 +19,11 @@
 .popup__btn-save:hover {
     opacity: 80%;
 }
+
+@media screen and (max-width: 1023px) {
+    .popup__btn-save {
+        width: 238px;
+        height: 46px;
+        margin: 0 22px 25px;
+    }
+}
