--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -17,3 +17,11 @@
 .popup__close-btn:hover {
     opacity: 60%;
 }
+
+@media screen and (max-width: 1023px) {
+    .popup__close-btn {
+        width: 20px;
+        height: 20px;
+        right: 0;
+    }
+}
