--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,3 +7,9 @@
     box-sizing: border-box;
     position: relative;
 }
+
+@media screen and (max-width: 1023px) {
+    .popup__container {
+        max-width: 282px;
+    }
+}
