--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,11 @@
     line-height: 29px;
     color: #000000;
 }
+
+@media screen and (max-width: 1023px) {
+    .popup__title {
+        font-size: 18px;
+        line-height: 22px;
+        margin: 25px 22px 0;
+    }
+}
