--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -4,6 +4,7 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    /*grid-template-rows: repeat(2, 1fr);*/
     column-gap: 17px;
     row-gap: 20px;
 }
