--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,6 +6,7 @@
 @media screen and (max-width: 1023px) {
     .header__logo {
         max-width: 103.5px;
+        padding-left: 27px;
         padding-bottom: 31.6px;
     }
 }
