--- a/blocks/elements/__caption-container/elements__caption-container.css
+++ b/blocks/elements/__caption-container/elements__caption-container.css
@@ -1,5 +1,7 @@
 .elements__caption-container {
-    margin: 0;
+    margin: 25px auto 31px;
+    max-width: 246px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
