--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -4,7 +4,7 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /*grid-template-rows: repeat(2, 1fr);*/
+    grid-template-rows: repeat(2, 361px);
     column-gap: 17px;
     row-gap: 20px;
 }
@@ -12,6 +12,7 @@
 @media screen and (max-width: 1023px) {
     .elements__list {
         grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 361px;
         justify-content: center;
     } 
 }
