--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,6 +5,12 @@
 
 @media screen and (max-width: 1023px) {
     .footer {
+        max-width: 80%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .footer {
         max-width: 282px;
         margin-bottom: 36px;
     }
