--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,6 +5,12 @@
 
 @media screen and (max-width: 1023px) {
     .header__logo {
+        max-width: 80%
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header__logo {
         max-width: 103.5px;
         padding-left: 27px;
         padding-bottom: 31.6px;
