--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -11,6 +11,12 @@
 
 @media screen and (max-width: 1023px) {
     .header {
+        max-width: 80%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header {
         max-width: 320px;
         margin: 28px auto 0;
     }
