--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -10,6 +10,12 @@
 
 @media screen and (max-width: 1023px) {
     .popup__container {
+        max-width: 55%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .popup__container {
         max-width: 282px;
     }
 }
