--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -17,8 +17,9 @@
     opacity: 60%;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
     .profile__add-btn {
+        background-image: url(../../../images/addbtn320.svg);
         width: 282px;
     }
 }
