--- a/blocks/profile/__user-info/profile__user-info.css
+++ b/blocks/profile/__user-info/profile__user-info.css
@@ -4,8 +4,9 @@
     gap: 18px;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
     .profile__user-info {
+        margin-left: 30px;
         gap: 10px;
     }
 }
