--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -8,6 +8,12 @@
 
 @media screen and (max-width: 1023px) {
     .profile {
+        max-width: 80%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .profile {
         max-width: 282px;
         margin: 42px auto 36px;
         flex-direction: column;
