blocks - правки после 1 ревью

--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,6 @@
 .popup__input {
     margin-bottom: 30px;
+    padding: 0 0 13px 0;
     width: 100%;
     font-style: normal;
     font-weight: 400;
