--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -25,5 +25,7 @@
         width: 238px;
         height: 46px;
         margin: 0 22px 25px;
+        font-size: 14px;
+        line-height: 17px;
     }
 }
