--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 1023px) {
     .elements__list {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 282px);
         grid-auto-rows: 361px;
         justify-content: center;
     } 
