--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,4 +8,6 @@
     width: 100vw;
     height: 100vh;
     z-index: 2;
+    background-color: rgba(0, 0, 0, .5);
+    transition: opacity .5s ease;
 }
