--- a/blocks/elements/__btn-like/elements__btn-like.css
+++ b/blocks/elements/__btn-like/elements__btn-like.css
@@ -1,7 +1,5 @@
 .elements__btn-like {
-    background-image: url(../../../images/like.svg);
-    background-repeat: no-repeat;
-    background-color: transparent;
+    background: url(../../../images/like.svg) no-repeat transparent;
     width: 22px;
     height: 19px;
     padding: 0;
