--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,4 +10,11 @@
     z-index: 2;
     background-color: rgba(0, 0, 0, .5);
     transition: opacity .5s ease;
+    visibility: hidden;
+    opacity: 0;
 }
+
+.popup_opened {
+    visibility: visible;
+    opacity: 1;
+  }
