--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,18 +1,27 @@
 .elements {
     max-width: 880px;
     margin: 0 auto 67px;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 361px;
+    column-gap: 17px;
+    row-gap: 20px;
 }
 
 @media screen and (max-width: 1023px) {
     .elements {
         max-width: 80%;
         margin-bottom: 48px;
-    }
+        grid-template-columns: repeat(2, 282px);
+        justify-content: center;
+    } 
 }
 
 @media screen and (max-width: 767px) {
     .elements {
         max-width: 282px;
         margin-bottom: 48px;
+        grid-template-columns: repeat(1, 1fr);
     }
 }
