--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -67,6 +67,15 @@
         fill: #000000;
 }
 
+.cards__btn-like_active {
+    background-image: url(../../images/like_active.svg);
+    transition: opacity .2s ease;
+}
+
+.cards__btn-like_active:hover {
+    opacity: 50%;
+}
+
 .cards__delete-btn {
     background: url(../../images/delete_btn.svg) no-repeat transparent center;
     margin: 0;
