--- a/blocks/cards/__photo/cards__photo.css
+++ b/blocks/cards/__photo/cards__photo.css
@@ -1,6 +1,6 @@
-.elements__photo {
+.cards__photo {
     min-height: 282px;
-    height: 50%;
+    height: 50%;;
     width: 100%;
     object-fit: cover;
     border-radius: 10px 10px 0px 0px;
