--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,7 @@
 @import url(../blocks/popup/__close-btn/popup__close-btn.css);
 @import url(../blocks/popup/__btn-save/popup__btn-save.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/_type/popup_type_photo-open.css);
+@import url(../blocks/popup/__photo-open/popup__photo-open.css);
+@import url(../blocks/popup/__figcaption/popup__figcaption.css);
+@import url(../blocks/popup/__container_photo/popup__container_photo.css);
