--- a/blocks/cards/__delete-btn/cards__delete-btn.css
+++ b/blocks/cards/__delete-btn/cards__delete-btn.css
@@ -1,5 +1,5 @@
 .cards__delete-btn {
-    background: url(../../images/delete_btn.svg) no-repeat transparent center;
+    background: url(../../../images/delete_btn.svg) no-repeat transparent center;
     margin: 0;
     padding: 0;
     position: absolute;
