--- a/blocks/cards/__btn-like/_active/cards__btn-like_active.css
+++ b/blocks/cards/__btn-like/_active/cards__btn-like_active.css
@@ -1,5 +1,5 @@
 .cards__btn-like_active {
-    background-image: url(../../images/like_active.svg);
+    background-image: url(../../../../images/like_active.svg);
     transition: opacity .2s ease;
 }
 
