--- a/blocks/popup/__figcaption/popup__figcaption.css
+++ b/blocks/popup/__figcaption/popup__figcaption.css
@@ -1,5 +1,6 @@
 .popup__figcaption {
-    width: 291px;
+    position: absolute;
+    margin-top: 10px;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -8,5 +9,6 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    /*bottom: -25px;*/
+    left: 0;
+    right: 0;
 }
