--- a/blocks/popup/__photo-open/popup__photo-open.css
+++ b/blocks/popup/__photo-open/popup__photo-open.css
@@ -1,6 +1,7 @@
 .popup__photo-open {
-    height: 75vh;
-    width: 75vw;
+    max-height: 75vh;
+    max-width: 75vw;
     margin: 0;
     padding: 0;
+    object-fit: contain;
 }
