--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -20,6 +20,12 @@
     opacity: 80%;
 }
 
+@media screen and (max-width: 1023px) {
+    .popup__btn-save {
+        width: 85%;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .popup__btn-save {
         width: 238px;
