--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,7 +9,7 @@
     height: 100%;
     z-index: 2;
     background-color: rgba(0, 0, 0, .5);
-    transition: visibility .5s opacity .5s linear;
+    transition: visibility .5s, opacity .5s linear;
     visibility: hidden;
     opacity: 0;
 }
