--- a/pages/index.css
+++ b/pages/index.css
@@ -40,4 +40,4 @@
 @import url(../blocks/popup/_type/popup_type_photo-open.css);
 @import url(../blocks/popup/__photo-open/popup__photo-open.css);
 @import url(../blocks/popup/__figcaption/popup__figcaption.css);
-@import url(../blocks/popup/__container_photo/popup__container_photo.css);
+@import url(../blocks/popup/__container-photo/popup__container-photo.css
