--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,5 @@
 .popup__input {
-    margin-bottom: 30px;
+    margin: 0px;
     padding: 0 0 9px 0;
     width: 100%;
     font-style: normal;
@@ -9,8 +9,4 @@
     color: #000000;
     border: none;
     border-bottom: 1px solid #000000;
-}
-
-.popup__input:last-of-type {
-    margin-bottom: 0;
 }
